--- a/bioSite.css
+++ b/bioSite.css
@@ -1,7 +1,7 @@
 body {
     background-color: #e6e6fa; /* Light Purple background */
     color: #4b0082; /* Complimentary font color */
-    font-family: Arial, sans-serif;
+    font-family: 'Kunstler Script Bold', cursive;
     text-align: center;
 }
 
