--- a/bioSite.css
+++ b/bioSite.css
@@ -1,5 +1,5 @@
 body {
-    background: url('https://www.vectorstock.com/royalty-free-vector/purple-and-gold-luxury-background-vector-1345539') repeat;
+    background:  background-color: #9370DB;
     font-family: 'Lucida', Lucida Bright;
     color: #000000; /* black */
 }
