--- a/bioSite.css
+++ b/bioSite.css
@@ -55,9 +55,9 @@ p {
 }
 
 img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
-    margin: 10px auto; /* Center and add margin */
+    display: block;
 }
 
 a:hover {
