--- a/bioSite.css
+++ b/bioSite.css
@@ -93,3 +93,10 @@ img {
 a:hover {
     text-decoration: underline;
 }
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    left: 0;
+}
